# docs/api/openapi.yaml
@@ -2799,6 +2799,11 @@ paths:
         required: false
         schema:
           type: boolean
+      - in: query
+        name: ciProbe
+        required: false
+        schema:
+          type: string
       - description: Zero-based page index (0..N)
         in: query
         name: page
